[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "checkagent"
version = "0.0.1a1"
description = "The open-source testing framework for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "CheckAgent Contributors" },
]
keywords = ["testing", "ai", "agents", "pytest", "evaluation", "llm"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pluggy>=1.0",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
otel = ["opentelemetry-api>=1.20"]
structured = ["dirty-equals>=0.7", "deepdiff>=7.0"]
safety-ner = ["spacy>=3.7"]
dev = [
    "checkagent[otel,structured]",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/xydac/checkagent"
Repository = "https://github.com/xydac/checkagent"
Issues = "https://github.com/xydac/checkagent/issues"

[project.scripts]
checkagent = "checkagent.cli:main"

[project.entry-points.pytest11]
checkagent = "checkagent.core.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/checkagent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "agent_test: mark a test as an agent test with layer specification",
    "safety: mark a test as a safety test with category and severity",
    "cassette: specify a cassette file for record-replay testing",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
